src/test/deca/syntax/valid/readany/mul_floatvar_float_mul_readfloat.deca
//
//      Test syntaxiquement correct de la multiplication  d'un float et d'un readFloat dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y= 3.5* readFloat();
}