src/test/deca/syntax/invalid/modulo_void_modulo_float.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      gauche de l'opérateur % avec un float à droite).
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//      Créé le 06/06/2023 par gl03

{
    float y = %2.8;
    print(y);
}